software-center (1.1.14) UNRELEASED; urgency=low

  * softwarecenter/view/:
    - add a bunch of missing atk description to the widgets

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Feb 2010 15:40:30 +0100

software-center (1.1.13) lucid; urgency=low

  [ Michael Vogt ]
  * data/featured.menu.in:
    - add scribus, blender
    - fix missing i18n
  * data/software-center.menu.in:
    - add a bunch of missing _
  * softwarecenter/backend/aptd.py:
    - fix cache reload functionality
    - fix display of update/external transactions (LP: #514861)
  * po/help/po4a.conf:
    - make help translatable via po4a (LP: #439353)
  * po/help/software-center-doc.pot:
    - add help pot
  * setup.py:
    - build help translations automatically

  [ Gary Lasker ]
  * softwarecenter/view/viewswitcher.py:
    - fix ValueError in on_transactions_changed (LP: #523420)
    - fix AttributeError in do_render (LP: #523341)
  * softwarecenter/view/installedpane.py:
    - fix AttributeError in refresh_apps() (LP: #520097)
  * softwarecenter/view/widgets/pathbar2.py:
    - fix typo in PathBarThemeHumanClearlooks class,
      gave an AttributeError in __expose_cb() (LP: #523452) 
  * softwarecenter/app.py,
    softwarecenter/backend/aptd.py:
    - update to use new backend reload API (LP: #496058) 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Feb 2010 15:29:53 +0100

software-center (1.1.12) lucid; urgency=low

  [ Michael Vogt ]
  * merged lp:~mmcg069/software-center/spinner  (many thanks)
  * merged lp:~mmcg069/software-center/fixes-and-tweaks  (many thanks)
  
  [ Gary Lasker ]
  * implement standalone presentation of individual software
    repositories
  
  [ Michael Vogt ]
  * README:
    - document menu.d/ directory
  * softwarecenter/view/catview.py:
    - add SCPkgname xml filter
  * apt-xapian-index-plugin/software-center.py:
    - add custom apt-xapian-index plugins for indexing 
      "XB-Softwarecenter-Appname" in debian/control